# lz77-sss

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  test.out
bench/: bench_range_queries.cpp  gen_range_queries.cpp  lz77_sss_bench.cpp  lz77_sss_bench_tau.cpp  zip_bench.cpp
cli/: bench.cpp  bench_range_queries.cpp  gen_range_queries.cpp  lz77_sss_1_5-aprx.cpp  lz77_sss_3-aprx.cpp  lz77_sss_3_aprx.cpp  lz77_sss_bench-tau.cpp  lz77_sss_bench.cpp  lz77_sss_decode.cpp  lz77_sss_exact-smpl copy.cpp  lz77_sss_exact-smpl.cpp  lz77_sss_exact.cpp  lz77_sss_exact_smpl.cpp  lz77_sss_lpf_lnf_aprx.cpp  ssszip.cpp  zip-bench.cpp
cmake/: malloc_count_stub.c  win_atomic_shim.c
cmake/winshim/sys/: mman.h  resource.h
examples/: example.cpp  lz77_sss_example.cpp
include/lz77/: common.hpp  kkp2.hpp  lpf.hpp
include/lz77_sss/: lz77_sss.hpp
include/lz77_sss/algorithms/: common.cpp  lce_l.hpp
include/lz77_sss/algorithms/approximate/: common.cpp  lpf_lnf.cpp
include/lz77_sss/algorithms/approximate/factorize/: blockwise_all.cpp  blockwise_optimal.cpp  common.cpp  greedy.cpp  greedy_naive.cpp  greedy_optimized.cpp  greedy_parallel.cpp  skip_gaps.cpp
include/lz77_sss/algorithms/approximate/lpf_lnf/: all.cpp  external.cpp  greedy.cpp  lpf_lnf.cpp  lpf_naive.cpp  lpf_opt.cpp  nxv_pxv.cpp
include/lz77_sss/algorithms/transform_to_exact/: common.cpp  naive.cpp  optimized.cpp  with_samples.cpp  without_samples.cpp
include/lz77_sss/data_structures/: decomposed_range.hpp  parallel_rolling_hash_index_107.hpp  rabin_karp_substring.hpp  ring_buffer.hpp  rk61_substring.hpp  rolling_hash_index_107.hpp  rolling_hash_index_61.hpp
include/lz77_sss/data_structures/dynamic_range/: dynamic_range.hpp  dynamic_square_grid.hpp  dynamic_square_grid_hash.hpp  dynamic_square_grid_sdvec.hpp  semi_dynamic_square_grid.hpp
include/lz77_sss/data_structures/sample_index/: construction.cpp  queries.cpp  sample_index.hpp
include/lz77_sss/data_structures/static_weighted_range/: static_weighted_kd_tree.hpp  static_weighted_range.hpp  static_weighted_square_grid.hpp  static_weighted_striped_square.hpp
include/lz77_sss/misc/: block_huffman.hpp  huffman.hpp  utils.hpp  vbyte.hpp
include/lz77_sss_approx/: lz77_sss_approx.hpp
include/lz77_sss_approx/algorithms/: common.cpp  lpf_lnf.cpp
include/lz77_sss_approx/algorithms/factorize/: blockwise_optimal.cpp  greedy.cpp  hybrid.cpp
include/lz77_sss_approx/data_structures/: rolling_hash_index_107.hpp  rolling_hash_index_61.hpp
include/lz77_sss_approx/misc/: utils.hpp
tests/: test-progress.hpp  test.cpp  test_decomposed_range.cpp  test_dynamic_range.cpp  test_dynamic_range_queries.cpp  test_lz77_sss.cpp  test_rabin_karp_substring.cpp  test_rk61_substring.cpp  test_sample_index.cpp  test_static_weighted_range.cpp  test_static_weighted_range_queries.cpp
